# mnist_esp32cam

./: .gitmodules  README.md
esp32_cam/: Cargo.toml  sdkconfig.defaults
esp32_cam/.cargo/: config.toml
esp32_cam/src/: config.rs  espcam.rs  lib.rs  main.rs
web_interface/ui_test/: index.js  index2.js  test.html
